<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="._8_SQLiteExample.MainActivityEditContactEntry">

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editSecondName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFirstName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/second_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSecondName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName|phone"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPhoneNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editHomeAddress"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:hint="@string/home_address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_below="@id/editHomeAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="16dp"
        android:onClick="UpdateRecord"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="135dp"
        android:layout_height="59dp"
        android:layout_below="@id/editHomeAddress"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@id/btnUpdate"
        android:onClick="DeleteRecord"
        android:text="@string/delete" />

</RelativeLayout>