<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgListView"
        android:layout_width="160dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/canyon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:hint="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imgListView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtText"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:hint="@string/text"
        app:layout_constraintStart_toEndOf="@+id/imgListView"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>