<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="._8_SQLiteExample.MainActivityNewContact">

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtSecondName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtFirstName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/second_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSecondName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName|phone"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPhoneNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtHomeAddress"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/home_address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="159dp"
        android:layout_height="80dp"
        android:layout_below="@id/edtHomeAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/save_to_sql"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>