<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._14_b_FirebaseExample_Contd_15.FirbaseExampleOneMainActivity">

    <Button
        android:id="@+id/button11"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginTop="104dp"
        android:onClick="RetrieveValues"
        android:text="@string/retrieve_values"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/button10"
        android:layout_width="217dp"
        android:layout_height="66dp"
        android:layout_marginTop="124dp"
        android:text="@string/remove_values"
        android:onClick="RemoveValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginTop="104dp"
        android:text="@string/add_values"
        android:onClick="AddValuesToFirebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>