<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._5_PermissionExamples.PermissionExample1">

    <Button
        android:id="@+id/btnReqPer"
        android:layout_width="375dp"
        android:layout_height="70dp"
        android:layout_marginTop="168dp"
        android:text="@string/request_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        android:onClick="requestPermission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCheckPer"
        android:layout_width="375dp"
        android:layout_height="70dp"
        android:layout_marginTop="112dp"
        android:onClick="checkPermission"
        android:text="@string/check_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReqPer" />

    <Button
        android:id="@+id/btnReadContext"
        android:layout_width="375dp"
        android:layout_height="70dp"
        android:text="@string/read_context"
        android:onClick="readContacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckPer" />
</androidx.constraintlayout.widget.ConstraintLayout>