<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._6_FileHandlingExample.FileHandlingExampleMainActivity">

    <Button
        android:id="@+id/edtShow"
        android:layout_width="234dp"
        android:layout_height="70dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="100dp"
        android:onClick="ReadFromFile"
        android:text="@string/show"
        app:layout_constraintBottom_toTopOf="@+id/txtReadFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="234dp"
        android:layout_height="70dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="89dp"
        android:text="@string/save"
        android:onClick="SaveToFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtWriteFile" />

    <EditText
        android:id="@+id/edtWriteFile"
        android:layout_width="282dp"
        android:layout_height="73dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/enter_your_data"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/txtReadFile"
        android:layout_width="236dp"
        android:layout_height="52dp"
        android:textSize="20sp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>